# SP_2025

./: .gitignore  CMakeLists.txt
EN/aud1/: task1.cpp  task10.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
EN/aud10/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp
EN/aud11/: README.md  task1.cpp  task2.cpp  task3.cpp
EN/aud2/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp
EN/aud3/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
EN/aud4/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
EN/aud6/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
EN/aud7/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp
EN/aud8/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp
EN/aud9/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp
MK/aud1/: zad10.cpp  zad4.cpp  zad5.cpp  zad6.cpp  zad7.cpp  zad8.cpp  zad9.cpp
MK/aud10/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp  zad8.cpp
MK/aud2/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp  zad7.cpp  zad8.cpp
MK/aud3/: zad1.cpp  zad2.cpp  zad3.cpp  zad6.cpp
MK/aud4/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  zad6.cpp  zad7.cpp  zad8.cpp  zad9.cpp
MK/aud6/: zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp  (+3 more)
aud1/: zad1.cpp  zad2.cpp  zad3.cpp
(+20 files in other folders)
