cmake_minimum_required(VERSION 3.24)
project(SP_SIIS_2025)

set(CMAKE_CXX_STANDARD 17)

#add_executable(SP_SIIS_2025 main.cpp)

add_executable(zad1 aud1/zad1.cpp)
add_executable(zad2 aud1/zad2.cpp)
add_executable(zad3 aud1/zad3.cpp)
add_executable(zad4 aud1/zad4.cpp)
add_executable(zad5 aud1/zad5.cpp)
add_executable(zad6 aud1/zad6.cpp)
add_executable(zad7 aud1/zad7.cpp)
