cmake_minimum_required(VERSION 3.24)
project(SP_SIIS_2025)

set(CMAKE_CXX_STANDARD 17)

#add_executable(SP_SIIS_2025 main.cpp)

add_executable(zad1 MK/aud3/zad1.cpp)
add_executable(zad2 MK/aud3/zad2.cpp)
add_executable(zad3 MK/aud3/zad3.cpp)
add_executable(zad4 MK/aud3/zad4.cpp)
add_executable(zad5 MK/aud3/zad5.cpp)
add_executable(zad6 MK/aud3/zad6.cpp)
add_executable(zad7 MK/aud2/zad7.cpp)
add_executable(zad8 MK/aud2/zad8.cpp)
add_executable(zad9 MK/aud1/zad9.cpp)
add_executable(zad10 MK/aud1/zad10.cpp)


add_executable(task1 EN/aud3/task1.cpp)
add_executable(task2 EN/aud3/task2.cpp)
add_executable(task3 EN/aud3/task3.cpp)
add_executable(task4 EN/aud3/task4.cpp)
add_executable(task5 EN/aud3/task5.cpp)
add_executable(task6 EN/aud3/task6.cpp)
add_executable(task7 EN/aud3/task7.cpp)
add_executable(task8 EN/aud3/task8.cpp)
add_executable(task9 EN/aud3/task9.cpp)
add_executable(task10 EN/aud1/task10.cpp)
